test/errhandling/parallel/sync-around-bad-throws-call.good
sync-around-bad-throws-call.chpl:7: In function 'badFn':
sync-around-bad-throws-call.chpl:9: error: call to throwing function throwingFn without throws, try, or try! (relaxed mode)
sync-around-bad-throws-call.chpl:6: note: throwing function throwingFn defined here
